[package]
name = "orbclient"
version = "0.3.49"
authors = ["Jeremy Soller <jackpot51@gmail.com>"]
description = "The Orbital Client Library"
documentation = "https://docs.rs/orbclient"
repository = "https://gitlab.redox-os.org/redox-os/orbclient"
readme = "README.md"
license = "MIT"
edition = "2018"
keywords = [
    "orbital",
    "redox",
    "ui",
]

[lib]
name = "orbclient"
path = "src/lib.rs"

[target.'cfg(not(target_os = "redox"))'.dependencies]
sdl2 = { version = "0.38.0", optional = true }
sdl2-sys = { version = "0.38.0", optional = true }
libc = { version = "0.2", optional = true }
raw-window-handle = { version = "0.5.2", optional = true }

[target.'cfg(target_os = "redox")'.dependencies]
libredox = "0.1"

[features]
default = ["std", "sdl", "unifont"]
std = []
sdl = ["sdl2", "sdl2-sys", "libc"]
bundled = ["sdl", "sdl2/bundled", "sdl2/static-link", "sdl2-sys/bundled", "sdl2-sys/static-link"]
unifont = []
