[package]
name = "orbclient"
version = "0.3.53"
authors = ["Jeremy Soller <jackpot51@gmail.com>"]
description = "The Orbital Client Library"
documentation = "https://docs.rs/orbclient"
repository = "https://gitlab.redox-os.org/redox-os/orbclient"
readme = "README.md"
license = "MIT"
edition = "2018"
keywords = [
    "orbital",
    "redox",
    "ui",
]

[lib]
name = "orbclient"
path = "src/lib.rs"

[dependencies]
image = { version = "0.21.0", optional = true }
resize = { version = "0.3.0", optional = true }

[target.'cfg(not(target_os = "redox"))'.dependencies]
sdl2 = { version = "0.38.0", optional = true }
raw-window-handle = { version = "0.5.2", optional = true }

[target.'cfg(target_os = "redox")'.dependencies]
libc = "0.2"
libredox = "0.1"

[features]
default = ["std", "sdl", "unifont"]
image = ["std", "dep:image", "dep:resize"]
std = []
sdl = ["dep:sdl2"]
bundled = ["sdl", "sdl2/bundled", "sdl2/static-link"]
unifont = []
